# aerospiker

./: .gitignore  Makefile  README.md  docker-compose.yml
gopsike/: go.mod  go.sum  main.go
loader/: README.md  generate_data.py  generate_urls.py  load_data.py  pyproject.toml  requirements.txt
rspike/: Cargo.toml
rspike/src/: main.rs
