[project]
name = "aerospike-loader"
version = "0.1.0"
description = "Data loader for Aerospike"
requires-python = ">=3.8"
dependencies = [
    "aerospike>=8.0.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38" 